app/main/default/objects/Flosum__RepositoryCredentials__c/fields/Flosum__CompileXml__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__CompileXml__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CompileXml</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>