app/main/default/objects/Flosum__RepositoryCredentials__c/fields/Flosum__Directory__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Directory__c</fullName>
        <label>Directory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>