app/main/default/objects/Flosum__RepositoryCredentials__c/fields/Flosum__Project_Format__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__Project_Format__c</fullName>
        <label>Project Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>DX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>