app/main/default/objects/Flosum__RepositoryCredentials__c/fields/Flosum__protocol__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__protocol__c</fullName>
        <description>Available protocols</description>
        <label>Protocol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HTTPS</fullName>
                    <default>true</default>
                    <label>HTTPS</label>
                </value>
                <value>
                    <fullName>SSH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>