app/main/default/objects/Flosum__RepositoryCredentials__c/fields/Flosum__SyncOnlyChanges__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Flosum__SyncOnlyChanges__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync Only Changes</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>